<resources>
    <string name="app_name">LectureVision</string>
    
    <!-- Settings Screen -->
    <string name="settings_title">설정</string>
    <string name="section_app_settings">앱 설정</string>
    <string name="section_account">계정</string>
    <string name="section_info">이용 안내</string>
    
    <string name="pref_notifications">알림 설정</string>
    <string name="pref_dark_mode">다크 모드</string>
    <string name="pref_ticket_indicator">티켓 상태 표시</string>
    <string name="pref_debug_mode">디버그 모드</string>
    <string name="pref_model_url_title">모델 서버 URL 입력</string>
    <string name="pref_language">언어 변경</string>
    <string name="current_lang_ko">한국어</string>
    <string name="current_lang_en">English</string>
    
    <string name="action_change_password">비밀번호 변경</string>
    <string name="action_change_email">이메일 변경</string>
    
    <string name="info_app_version">앱 버전</string>
    <string name="info_privacy_policy">개인정보 처리방침</string>
    <string name="info_terms_of_service">서비스 이용약관</string>
    
    <string name="action_logout">로그아웃</string>
    <string name="copyright">Lecture Vision © 2025</string>

    <!-- Dialogs & Toasts -->
    <string name="dialog_logout_title">로그아웃</string>
    <string name="dialog_logout_message">정말로 로그아웃 하시겠습니까?</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_change">변경</string>
    <string name="btn_connect">연결</string>
    
    <string name="dialog_lang_title">언어 선택 / Select Language</string>
    
    <string name="dialog_pw_title">비밀번호 변경</string>
    <string name="hint_current_pw">현재 비밀번호</string>
    <string name="hint_new_pw">새 비밀번호</string>
    <string name="hint_confirm_pw">새 비밀번호 확인</string>
    
    <string name="dialog_email_title">이메일 변경</string>
    <string name="hint_new_email">새로운 이메일 (@gnu.ac.kr)</string>
    
    <string name="msg_fill_all">모든 항목을 입력해주세요.</string>
    <string name="msg_pw_mismatch">새 비밀번호가 일치하지 않습니다.</string>
    <string name="msg_pw_changed">비밀번호가 성공적으로 변경되었습니다.</string>
    <string name="msg_invalid_email">유효한 이메일을 입력해주세요.</string>
    <string name="msg_email_changed">이메일이 변경되었습니다.</string>
    
    <string name="msg_noti_on">알림이 켜졌습니다.</string>
    <string name="msg_noti_off">알림이 꺼졌습니다.</string>
    <string name="msg_dark_mode_on">다크 모드가 켜졌습니다.</string>
    <string name="msg_dark_mode_off">다크 모드가 꺼졌습니다.</string>
    <string name="msg_privacy_preparing">개인정보 처리방침을 준비 중입니다.</string>
    <string name="msg_terms_preparing">서비스 이용약관을 준비 중입니다.</string>
    
    <string name="msg_model_url_saved">모델 서버 주소가 저장되었습니다.</string>
    <string name="msg_connecting">연결 시도 중…</string>
    <string name="msg_connected">모델 서버에 성공적으로 연결되었습니다!</string>
    <string name="msg_connection_failed">연결 실패: %s</string>
    <string name="msg_invalid_url">URL은 http:// 또는 https://로 시작해야 합니다.</string>
    <string name="msg_enter_url">URL을 입력해주세요.</string>
    <string name="msg_server_error">서버 응답 오류: %s</string>

    <!-- Home Screen -->
    <string name="home_notice_title">공지사항</string>
    <string name="home_no_notice">등록된 공지사항이 없습니다.</string>
    <string name="home_notice_error">공지사항을 불러올 수 없습니다.</string>
    <string name="home_ticket_status_title">🎟️ 내 티켓 상태</string>
    <string name="home_ticket_checking">확인 중…</string>
    <string name="home_issue_ticket_btn">티켓 발급하기</string>
    <string name="home_current_people">현재 인원</string>
    <string name="home_total_people">총 인원</string>
    <string name="home_absent">결석</string>
    <string name="home_timer_title">측정 타이머</string>
    <string name="home_timer_setting">수업 시간 설정</string>
    <string name="home_timer_start_btn">측정 시작</string>
    <string name="home_timer_stop_btn">측정 정지</string>
    <string name="home_timer_default_time">00:00</string>
    <string name="home_today_schedule_title">📅 오늘의 시간표</string>
    <string name="format_today_schedule">오늘의 시간표 (%s)</string>
    <string name="home_no_schedule">오늘은 예정된 수업이 없습니다.</string>

    <!-- Timetable Screen -->
    <string name="timetable_title">시간표</string>
    <string name="timetable_add">추가</string>
    <string name="timetable_edit">수정/삭제</string>
    <string name="timetable_edit_done">편집 완료</string>
    
    <!-- Records Screen -->
    <string name="records_title">기록</string>
    <string name="records_tab_list">목록</string>
    <string name="records_tab_stats">통계</string>
    <string name="records_filter_all_subjects">전체 과목</string>
    <string name="records_filter_all_period">전체 기간</string>
    <string name="records_filter_recent_1">최근 1일</string>
    <string name="records_filter_recent_7">최근 7일</string>
    <string name="records_filter_recent_30">최근 30일</string>
    <string name="records_reset_filter">초기화</string>
    <string name="records_search">조회</string>
    <string name="records_total_count">총 %d개의 기록</string>
    <string name="records_empty">기록이 없습니다.</string>
    <string name="record_item_present">출석 : %d명</string>
    <string name="record_item_absent">결석 : %s명</string>
    
    <!-- Statistics -->
    <string name="stats_attendance_rate">출석률</string>
    <string name="stats_absence_rate">결석률</string>
    <string name="stats_top3_absent">결석률 높은 과목 TOP 3</string>
    <string name="stats_week_chart_title">요일별 출석/결석 현황</string>
    <string name="stats_chart_legend_present">출석</string>
    <string name="stats_chart_legend_absent">결석</string>

    <!-- Navigation -->
    <string name="nav_home">홈</string>
    <string name="nav_timetable">시간표</string>
    <string name="nav_records">기록</string>
    <string name="nav_settings">설정</string>

    <!-- Days -->
    <string name="day_sunday">일요일</string>
    <string name="day_monday">월요일</string>
    <string name="day_tuesday">화요일</string>
    <string name="day_wednesday">수요일</string>
    <string name="day_thursday">목요일</string>
    <string name="day_friday">금요일</string>
    <string name="day_saturday">토요일</string>

    <string name="dialog_class_add_title">수업 추가</string>
    <string name="dialog_class_edit_title">수업 수정</string>
    <string name="dialog_class_add_btn">추가</string>
    <string name="dialog_class_edit_btn">수정</string>
    <string name="dialog_class_cancel_btn">취소</string>
    <string name="msg_enter_class_name">수업명을 입력해주세요.</string>
    <string name="msg_class_added">수업이 추가되었습니다.</string>
    <string name="msg_class_updated">수업이 수정되었습니다.</string>
    <string name="msg_class_deleted">\'%s\' 수업이 삭제되었습니다.</string>
    <string name="msg_class_not_found">수업을 찾을 수 없습니다.</string>
    <string name="dialog_manage_title">\'%s\' 관리</string>
    <string name="dialog_option_edit">수정</string>
    <string name="dialog_option_delete">삭제</string>
    <string name="msg_select_edit_delete">수업을 선택하여 수정/삭제하세요.</string>

    <!-- Messages & Formats -->
    <string name="msg_filter_reset">필터가 초기화되었습니다.</string>
    <string name="msg_searching">기록을 조회합니다…</string>
    <string name="msg_load_fail">기록 로드 실패: %s</string>
    <string name="msg_stats_preparing">통계 기능 준비중…</string>

    <string name="msg_ticket_issuing">발급 요청 중…</string>
    <string name="msg_ticket_issued">티켓이 발급되었습니다!</string>
    <string name="msg_issue_failed">발급 실패</string>
    <string name="msg_class_finish_timer">수업 종료 (출석 마감)</string>
    <string name="msg_timer_finished">측정이 완료되었습니다.</string>
    <string name="msg_measurement_complete">인원수 측정이 완료되었습니다!</string>
    <string name="msg_ticket_checking_status">티켓 확인 중…</string>
    <string name="msg_ticket_no_info">티켓 정보 없음</string>
    <string name="format_schedule_item">• %1$s (%2$s - %3$s)</string>

    <!-- Popup Comparison -->
    <string name="popup_comparison_title">🔔 인원 측정 결과</string>
    <string name="popup_comparison_total">총 인원 : %s</string>
    <string name="popup_comparison_present">출석   시작 %1$d   →   종료 %2$d %3$s</string>
    <string name="popup_comparison_absent">결석   시작 %1$d   →   종료 %2$d %3$s</string>
</resources>
